--- a/src/styles/404.css
+++ b/src/styles/404.css
@@ -1,11 +1,17 @@
 .not-found-message {
-    margin: 40px auto;
-    text-align: center;
-  }
-  
-  .not-found-image {
-    width: 100%;
-    height: auto;
-    margin: 40px auto;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 40px;
-  }
+  font-size: 16px;
+  margin: 40px 0 0 0;
+  text-align: center;
+}
+
+.not-found-top {
+  font-size: 22px;
+  margin: 40px 0 0 0;
+  text-align: center;
+
+}
+
+.not-found-image {
+  margin-left: auto;
+  margin-right: auto;
+}
