--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,4 +1,24 @@
-.footer {
-    color: #595959;
-    text-align: center;
-  }
+footer {
+  padding: 15px 0px 15px 0px; 
+  text-align: center;
+}
+
+.icon {
+  border-radius: 99%;
+  width: 70px;
+  height: 70px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.twitter{
+  color: #b8b7ad;
+  font-size: 16px;
+
+}
+
+.all-right{
+  margin: 15px 0px 15px 0px; 
+  font-size: 12px;
+}
