--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,7 +1,5 @@
-.layout {
-    margin: 0 auto;
-    max-width: 960px;
-    padding: 0 1.1rem 1.45rem;
-  }
-
-  
+/* コンテンツのメイン位置調整 */
+.main{
+  padding: 180px 30px 20px 30px;
+  line-height: 1.3; 
+}
