--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -1,4 +1,4 @@
-.post-header {
+/* .post-header {
     margin: 80px auto;
     max-width: 700px;
   }
@@ -23,4 +23,4 @@
   .post-body img{
     width: 100%;
     height: auto;
-  }
+  } */
