--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,7 +13,7 @@ h1 {
 h2 {
   font-size: 20px;
   text-align: center;
-  margin: 5px 10px 0px 10px;
+  margin: 50px 10px 10px 10px;
 }
 
 h3 {
@@ -23,8 +23,8 @@ h3 {
 }
 
 li {
-  font-size: 14px;
-  padding: 0.5em 0;
+  font-size: 15px;
+  padding: 15px 0 0 0;
 }
 
 
