--- a/src/styles/race_list.css
+++ b/src/styles/race_list.css
@@ -1,12 +1,11 @@
 .post-link-text {
   padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-  text-align: left;
 }
 
 .post-link {
   margin: 30px 0px;
-  box-shadow: rgba(120, 102, 65, 0.9) 0px 0px 10px 2px;
-  border-radius: 10px;
+  box-shadow: rgb(223, 151, 97) 0px 0px 5px 1px;
+  border-radius: 15px;
 }
 
 
