--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,10 +1,10 @@
 body {
-  background-color: #101010;
-  color: #ffffffba;
+  background-color: #000000ec;
+  color: #ffffffd1;
 }
 
 h1 {
-  font-size: 26px;
+  font-size: 24px;
   text-align: center;
   margin: 5px 10px -20px 10px;
 }
@@ -13,8 +13,9 @@ h1 {
 h2 {
   font-size: 20px;
   text-align: center;
-  margin: 50px 10px 10px 10px;
+  margin: 40px 10px 10px 10px;
 }
+
 
 h3 {
   font-size: 16px;
