--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,51 +1,213 @@
 body {
-  background-color: #000000ec;
+  background-color: #000000e7;
   color: #ffffffd1;
 }
 
-h1 {
-  font-size: 24px;
-  text-align: center;
-  margin: 5px 10px -30px 10px;
-}
-
-
-h2 {
-  font-size: 20px;
-  text-align: center;
-  margin: 20px 10px 10px 10px;
-}
-
-
-h3 {
-  font-size: 16px;
-  text-align: center;
-  margin: 5px 0px 0px 0px;
-}
-
-li {
-  font-size: 15px;
-  padding: 15px 0 0 0;
-}
-
-
 
 /* 予測用のテーブル設計 */
-.predict {
-  margin: 15px 0px 15px 0px;
-  padding: 0px 0px 0px 0px;
+.predict-mobile {
+  font-size: 16px;
   width: 100%;
+  margin: auto;
   text-align: center;
+
 }
 
-.predict th {
+.predict-mobile th {
   padding: 5px 0px 5px 0px;
   border-bottom: solid 1px;
   border-top: solid 1px;
+  text-align: center;
+
 }
 
-.predict td {
+.predict-mobile td {
   padding: 5px 0px 5px 0px;
   border-bottom: solid 1px;
   word-break: break-all;
+  text-align: center;
+
+}
+
+
+/* 予測用のテーブル設計 */
+.predict-pc {
+  font-size: 18px;
+  width: 70%;
+  margin: auto;
+
+}
+
+.predict-pc th {
+  padding: 5px 0px 5px 0px;
+  border-bottom: solid 1px;
+  border-top: solid 1px;
+
+}
+
+.predict-pc td {
+  padding: 5px 0px 5px 0px;
+  border-bottom: solid 1px;
+  word-break: break-all;
+
+}
+
+
+
+
+
+/************************ 基本 ************************/
+/* PC */
+.header-logo-pc{
+  font-size: 46px;
+  margin: 10px 0 0 0 ;
+  font-weight:bold;
+}
+
+.header-title-pc {
+  font-size: 36px;
+  text-align: center;
+  margin: 0px 20px 0px 20px;
+}
+
+.kakugen-pc{
+  font-size: 20px;
+  background:linear-gradient(transparent 90%, rgb(221, 153, 100) 95%);
+}
+
+.pc-title{
+  font-size: 36px;
+  text-align: center;
+  margin: 30px 20px 20px 20px;
+  line-height: 1.3em
+
+}
+
+.pc-content{
+  font-size: 20px;
+  margin: 20px 70px 10px 70px;
+  line-height: 1.8em
+}
+
+.pc-content-center{
+  font-size: 20px;
+  margin: 20px 70px 10px 70px;
+  line-height: 1.8em;
+  text-align: center;
+
+}
+
+
+/* mobile */
+
+.header-logo-mobile{
+  font-size: 36px;
+  margin: 20px 0 0 0 ;
+  font-weight:bold;
+}
+
+.header-title-mobile {
+  font-size: 16px;
+  text-align: center;
+  margin: 0px 20px 0px 20px;
+}
+
+.kakugen-mobile{
+  font-size: 16px;
+  background:linear-gradient(transparent 90%, rgb(221, 153, 100) 95%);
+}
+
+.mobile-title{
+  font-size: 20px;
+  text-align: center;
+  margin: -40px 10px 20px 10px;
+  line-height: 1.3em
+}
+
+.mobile-content{
+  font-size: 16px;
+  margin: 20px 10px 10px 10px;
+  line-height: 1.8em
+}
+
+.mobile-content-center{
+  font-size: 16px;
+  margin: 20px 10px 10px 10px;
+  line-height: 1.8em;
+  text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.dmm-ad{
+  display: flex;
+  justify-content: center;
+}
+
+
+.markdown-css {
+  font-size: 16px;
+  margin: 20px 10px 10px 10px;
+  line-height: 1.8em
+}
+
+/* 本日の予想 */
+.today-predict-list-mobile {
+  font-size: 16px;
+  margin: 30px 30px 30px 30px;
+  box-shadow: rgb(223, 151, 97) 0px 0px 5px 1px;
+  border-radius: 15px;
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+  text-align: center;
+}
+
+.today-predict-list-pc {
+  font-size: 20px;
+  margin: 30px 200px 30px 200px;
+  box-shadow: rgb(223, 151, 97) 0px 0px 5px 1px;
+  border-radius: 15px;
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+  text-align: center;
+}
+
+.btn-return{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* markdown */
+h2{
+  font-size: 18px;
+  text-align: center;
+}
+
+/* 本日の予想 */
+.blog-list-mobile {
+  font-size: 16px;
+  margin: 30px 30px 30px 30px;
+  box-shadow: rgb(223, 151, 97) 0px 0px 5px 1px;
+  border-radius: 15px;
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+  text-align: center;
+}
+
+.blog-list-pc {
+  font-size: 20px;
+  margin: 30px 200px 30px 200px;
+  box-shadow: rgb(223, 151, 97) 0px 0px 5px 1px;
+  border-radius: 15px;
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+  text-align: center;
 }
